# frameforge

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  REPRODUCIBILITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  WIRING.md
docs/superpowers/plans/: 2026-07-01-web-app-polish.md
docs/superpowers/specs/: 2026-07-01-web-app-polish-design.md
examples/: themes.yaml
src/frameforge/: __init__.py  cli.py  config.py  discover.py  doctor.py  expander.py  generator.py  imports.py  library.py  pipeline.py  server.py  tv_client.py
src/frameforge/static/: app.css  app.js  index.html  manifest.webmanifest
src/frameforge/static/js/: api.js  crop.js  lightbox.js  main.js  mock.js  router.js  selection.js  status.js  tvhealth.js  util.js
src/frameforge/static/js/views/: inspect.js  onboarding.js  schedule.js  settings.js  themeDetail.js  themes.js  tv.js
tests/: test_doctor.py  test_imports.py  test_library.py  test_server.py
