[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameforge"
version = "0.1.0"
description = "AI-generated themed art for Samsung Frame TVs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bill (Genstation)" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.40.0",
    "samsungtvws[encrypted,async]>=3.0.4",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
frameforge = "frameforge.cli:cli"
frameforged = "frameforge.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
